--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
         <script type="text/javascript" src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <link type="text/css" href="js/jquery-ui-themes-1.12.1/themes/redmond/jquery-ui.css" rel="stylesheet" />
         <link type="text/css" href="css/iot.css" rel="stylesheet" />
-
-        <link type="text/css" href="css/iconBar.css" rel="stylesheet" />
         <link type="text/css" href="css/font-awesome.min.css" rel="stylesheet" />
 	</head>
 	<body>
-            <div class="icon-bar-iot">
+            <div class="icon-bar">
               <a href="#"><i class="fa fa-square cuadrado"></i></a>
               <a href="#"><i class="fa fa-circle circulo"></i></a>
             </div>
