Se agrega funcionalidad a Circulo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	</head>
 	<body>
             <div class="icon-bar">
-              <a href="#"><i class="fa fa-square cuadrado"></i></a>
-              <a href="#"><i class="fa fa-circle circulo"></i></a>
+              <a href="#"><i class="fa fa-square cuadrado" title="Desplace contenedor a la zona de trabajo"></i></a>
+              <a href="#"><i class="fa fa-circle circulo" title="Desplace beacon a la zona de trabajo"></i></a>
             </div>
             <div id="box">
             </div>
