Se agrega funcionalidad de onda

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               <a href="#"><i class="fa fa-square cuadrado" title="Desplace contenedor a la zona de trabajo"></i></a>
               <a href="#"><i class="fa fa-circle circulo" title="Desplace beacon a la zona de trabajo"></i></a>
             </div>
-            <div id="box">
+            <div id="box" class="bg">
             </div>
 	</body>
 </html>
