Se agrega Check para activar Beacons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             <div id="box" class="bg">
             </div>
             <div class="icon-bar">
+              <input type="checkbox" id="chkBeacon" value="1">Act Beacon
               <a href="#"><i class="fa fa-square cuadrado" title="Desplace contenedor a la zona de trabajo"></i></a>
-              <a href="#"><i class="fa fa-circle circulo" title="Desplace beacon a la zona de trabajo"></i></a>
+              <a href="#"><i class="fa fa-bluetooth circulo" title="Desplace beacon a la zona de trabajo"></i></a>
             </div>
 	</body>
 </html>
