--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
         <link type="text/css" href="js/jquery-ui-themes-1.12.1/themes/redmond/jquery-ui.css" rel="stylesheet" />
         <link type="text/css" href="css/iot.css" rel="stylesheet" />
         <link type="text/css" href="css/font-awesome.min.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+<!--        
+        <link href="css/base.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+-->
 	</head>
 	<body>
             <div id="box" class="bg">
             </div>
             <div class="icon-bar">
+                <script src="../css-toggle-switch-source/css-toggle-switch-source/js/html5shiv.min.js" type="text/javascript"></script>
+<!--
+          <div class="switch">
+            <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round" type="checkbox">
+            <label for="cmn-toggle-1"></label>
+          </div>
+              <div class="switch">
+-->
+                  <input type="checkbox" id="chkBeacon" class="cmn-toggle cmn-toggle-round">
+                  <label for="chkBeacon"></label>
+<!--
+              </div>
               <input type="checkbox" id="chkBeacon" value="1">Act Beacon
+-->
               <a href="#"><i class="fa fa-square cuadrado" title="Desplace contenedor a la zona de trabajo"></i></a>
               <a href="#"><i class="fa fa-bluetooth circulo" title="Desplace beacon a la zona de trabajo"></i></a>
             </div>
