--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
 <html>
 	<head>
+        <link href="css/animate.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/editable-table-master/mindmup-editabletable.js"></script>
         <script type="text/javascript" src="js/iot.js"></script>
         <script type="text/javascript" src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <link type="text/css" href="js/jquery-ui-themes-1.12.1/themes/redmond/jquery-ui.css" rel="stylesheet" />
         <link type="text/css" href="css/iot.css" rel="stylesheet" />
+        <link type="text/css" href="css/style_iot.css" rel="stylesheet" />
         <link type="text/css" href="css/font-awesome.min.css" rel="stylesheet" />
+        <link type="text/css" href="css/w3.css" rel="stylesheet" />
 	</head>
 	<body>
-            <div id="box" class="bg">
+            <div class="w3-light-grey w3-round-xlarge" id="pbDimension">
+                <div class="w3-container w3-blue w3-center w3-round-xlarge" style="width:25%">1[m]</div>
             </div>
-            <div class="icon-bar">
-              <input type="checkbox" id="chkBeacon" value="1">Act Beacon
+            <div id="box" class="gray-bg">
+            </div>
+            <div id="props" class="frm">
+                <label class="frmLbl">Nombre:</label>
+                <input type="text" id="txtName" class="frmTxt" disabled>
+                <label class="frmLbl">Dimensión:</label>
+                <input type="text" id="txtDim" class="frmTxt" disabled>
+            </div>
+            <div id="iconBar" class="icon-bar">
+                <div>
+                <script src="css/css-toggle-switch-source/css-toggle-switch-source/js/html5shiv.min.js" type="text/javascript"></script>
+                  <input type="checkbox" id="chkBeacon" class="cmn-toggle cmn-toggle-round">
+                  <label for="chkBeacon"></label>
+
+                </div>
+                <div>
               <a href="#"><i class="fa fa-square cuadrado" title="Desplace contenedor a la zona de trabajo"></i></a>
+
+                </div>
+                <div>
               <a href="#"><i class="fa fa-bluetooth circulo" title="Desplace beacon a la zona de trabajo"></i></a>
+
+                </div>
             </div>
 	</body>
 </html>
